added a gixxer biko

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+
+     <h2>gixxer calai noto mono tune neo</h2>
+     <img src="Images/gixxer.webp" alt="">
+
      <h3>hfhfgyhdctrxjhytjctfgj</h3>
      <h1>rghdrtgbdrt gbtrfhddrh</h1>
      <ul>
